tests/error/template_unknown.gw
// [contains] unknown type
function<~A~> void my_function() { <<<"test">>>; }

my_function<~unknown_type~>();
